--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@remixicon/react": "^4.6.0",
-    "@tanstack/react-query": "^5.64.1",
+    "@tanstack/react-query": "^5.90.5",
     "axios": "^1.7.9",
     "better-auth": "^1.1.11",
     "class-variance-authority": "^0.7.1",
@@ -48,7 +48,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
-    "hono": "^4.6.16",
+    "hono": "^4.10.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.471.1",
     "mongodb": "^6.12.0",
@@ -70,15 +70,15 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tanstack/react-query-devtools": "^5.64.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tanstack/react-query-devtools": "^5.64.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
